Persistence Impl and UI Skeleton